@@ -64,6 +64,7 @@ extern SCM scm_string_downcase_x (SCM v);
 extern SCM scm_string_downcase (SCM v);
 extern SCM scm_string_capitalize_x (SCM v);
 extern SCM scm_string_capitalize (SCM v);
+extern SCM scm_string_split (SCM str, SCM chr);
 extern SCM scm_string_ci_to_symbol (SCM v);
 
 #define scm_substring_move_left_x scm_substring_move_x
